--- a/ProfSite/Views/BravoVets/adherence.cshtml
+++ b/ProfSite/Views/BravoVets/adherence.cshtml
@@ -57,7 +57,7 @@
                 <p>
                     <span class="header">Through consumer marketing efforts</span>
                     We help encourage new and existing customers to come to your office to inquire
-                    about
+                    about.
                 </p>
             </li>
             <li class="clearfix">
