--- a/ProfSite/Views/BravoVets/innovation.cshtml
+++ b/ProfSite/Views/BravoVets/innovation.cshtml
@@ -76,7 +76,7 @@
                 <p>
                     <span class="header">Through consumer marketing efforts</span>
                     We help encourage new and existing customers to come to your office to inquire
-                    about
+                    about.
                 </p>
             </li>
             <li class="clearfix">
@@ -90,7 +90,7 @@
                 <img src="~/Content/img/Bravecto_Support_img4.jpg" />
                 <p>
                     <span class="header">Bravecto</span>
-                    The newest online communications resources, is built to help you expand
+                    The newest online communications resources, are built to help you expand
                     your social media visibility and drive customers to your office from Facebook and Twitter -
                     while keeping you up to date on clinical research. Learn more about why you should have a presence in social media.
                 </p>
