--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -162,7 +162,7 @@
     <div class="bottom-support-download-row col-md-8 col-md-offset-2">
         <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
         <div class="bottom-support-download">
-            <h3>GOOD MEDICINE GROW BUSINESS</h3>
+            <h3>GOOD MEDICINE GROWS BUSINESS</h3>
             <p>
                 Discover more about how prescribing the best care
                 enhances business growth with the "Good Medicine Grows Business" eBook
