--- a/ProfSite/Content/bravectohome.css
+++ b/ProfSite/Content/bravectohome.css
@@ -1098,8 +1098,14 @@ form.form-reply button.btn-primary {
 
 .marketing-row {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 165px;
     margin-bottom: 50px;
+}
+
+@media (max-width : 450px) {
+    .marketing-row {
+        margin-top: 100px;
+    }
 }
 
     .marketing-row p {
