--- a/ProfSite/Views/BravoVets/adherence.cshtml
+++ b/ProfSite/Views/BravoVets/adherence.cshtml
@@ -16,7 +16,7 @@
             <div class="row top-jumbo-overlay">
                 <h1>Extend a game plan for far better adherence.</h1>
             </div>
-            <div class="bottom-jumbo-overlay">
+            <div class="bottom-jumbo-overlay bottomopaque">
                 <h4>
                     Give owners and their dogs more time together without worries or gaps in
                     protection with the only chew that lasts up to 12 weeks.*
@@ -28,107 +28,51 @@
 <div class="container static-body support-body">
     <div class="static-overlay bggreen">
         <h2>CLOSE THE ADHERENCE GAP.</h2>
-        <h3>Help reduce time between treatments with fewer, easier doses.</h3>
+        <h3>HELP REDUCE TIME BETWEEN TREATMENTS WITH FEWER, EASIER DOSES.</h3>
         <p>
             Did you know that the average dog is treated for fleas and ticks only 2.8 months of the year?<sup>1</sup> What’s more, studies have found that topical, once-a-month products are used correctly in less than 12% of dogs.
             That means that dogs spend most of the year unprotected – or insufficiently protected.
         </p>
         <p>
             With Bravecto, dogs are protected from fleas and ticks for up to 12 full weeks per treatment. That’s up to 3X longer than monthly treatments – meaning fewer chances for pet owners to forget or administer treatments incorrectly.
-            <a href="/contact-us">Contact your MSD sales representative to learn about prescribing Bravecto today.</a>
+            <br /><br /><a href="/contact-us">Contact your MSD sales representative</a> to learn about prescribing Bravecto today.
         </p>
     </div>
 </div>
-<div class="container support-video-container">
-    <div class="video-wrapper"></div>
-</div>
-<div class="container static-body support-body">
-    <div class="static-overlay bggreen">
-        <h2>MORE TOOLS YOU NEED TO BRING CLIENTS TO YOUR DOOR.</h2>
-        <p>
-            By partnering with Merck, you get the ability to further connect with pet owners
-            through a variety of tactics.
-        </p>
-    </div>
-    <div class="support-items col-md-10 col-md-offset-1">
-        <ul class="list-unstyled">
-            <li class="clearfix">
-                <img src="~/Content/img/Bravecto_Support_img2.jpg" />
-                <p>
-                    <span class="header">Through consumer marketing efforts</span>
-                    We help encourage new and existing customers to come to your office to inquire
-                    about.
-                </p>
-            </li>
-            <li class="clearfix">
-                <img src="~/Content/img/Bravecto_Support_img3.jpg" />
-                <p>
-                    <span class="header">Training for staff</span>
-                    Help them better engage with pet owners to help you build trust and loyaty for your practice.
-                </p>
-            </li>
-            <li class="clearfix">
-                <img src="~/Content/img/Bravecto_Support_img4.jpg" />
-                <p>
-                    <span class="header">Bravecto</span>
-                    The newest online communications resources, is built to help you expand
-                    your social media visibility and drive customers to your office from Facebook and Twitter -
-                    while keeping you up to date on clinical research. Learn more about why you should have a presence in social media.
-                </p>
-            </li>
-        </ul>
-    </div>
-    <div class="bottom-support-download-row col-md-8 col-md-offset-2">
-        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-        <div class="bottom-support-download">
-            <h3>THE ROLE OF BRAVECTO</h3>
-            <p>
-                Discover the benefits of partnering with
-                Merck with "The Role of Bravecto"
-            </p>
-            <a class="btn btn-default" href="#">
-                DOWNLOAD PDF
-                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-            </a>
-            <br />
-            <a href="#">
-                Share this
-                <i class="icon icon-share"></i>
-            </a>
-        </div>
-    </div>
-</div>
-<div class="support-benefits">
+<div class="support-benefits adherence-benefits">
     <div class="support-benefits-overlay">
         <div class="container">
             <div class="row">
-                <h2>THE BENEFITS OF BRAVECTO</h2>
+                <h2>EXTEND THE ANSWER TO ADHERENCE ISSUES WITH BRAVECTO</h2>
                 <div class="col-md-3">
-                    <h3>RECLAIM CLIENT LOYALTY</h3>
+                    <h3>FEWER CHANGES<br /> TO FORGET</h3>
                     <p>
-                        Position yourself and your practice as a trusted
-                        resource to keep clients coming back.
+                        Provide one dose that equals up
+                        to 12 full weeks of efficacy, with
+                        no efficacy breaks in between.
                     </p>
                 </div>
                 <div class="col-md-3">
-                    <h3>ESTABLISH <br />AUTHORITY</h3>
+                    <h3>QUICK AND <br />TIDY CHEW</h3>
                     <p>
-                        Present your practice as the go-to source
-                        for leading-edge treatments.
+                        Treatment is clean and convenient,
+                        with no messy hassles.
                     </p>
                 </div>
                 <div class="col-md-3">
-                    <h3>DELIVERY INNOVATIVE<br />PRODUCTS</h3>
+                    <h3>DRIVE FLEA INFESTATIONS<br />INTO EXTINCTION</h3>
                     <p>
-                        Provide products that aren't available
-                        in over-the-counter venues.
+                        Control environmental flea
+                        populations by killing newly
+                        emerged fleas before they can
+                        produce viable eggs.
                     </p>
                 </div>
                 <div class="col-md-3">
-                    <h3>TAKE BACK<br /> CONTROL</h3>
+                    <h3>ENSURE PROTECTION<br /> THROUGH EVERY SEASON</h3>
                     <p>
-                        Prescribe Bravecto to increase adherence and ensure every dog to treat
-                        receives the best care.
+                       Achieve full-year protection with
+                        just over 4 doses.<sup>2</sup>
                     </p>
                 </div>
             </div>
@@ -136,121 +80,30 @@
     </div>
 </div>
 <div class="container static-body support-body">
-    <div class="static-body-content">
-        <h2>MAKE OUR EXPERIENCE YOUR ADVANTAGE.</h2>
+    <div class="static-overlay bggreen">
+        <h2>THE NEW AND BETTER WAY TO DRIVE OUT FLEA INFESTATIONS.</h2>
         <p>
-            When you partner with Merck, you benefit from our robust experience in marketing and providing
-            products and services that enable pets and their owners to enjoy their time together - by keeping
-            them healthy along the way. From training to marketing to creating a social media presence,
-            Merck is there for you every step of the way. With Merck at your side, you can have the confidence
-            that, when you prescribe Bravecto, you're prescribing the safest, most innovative, high-quality
-            flea and tick treatment available in a chew.
+            When pet owners are dealing with a flea infestation, it can be around 3 months of itchy bites and obsessive cleaning. Monthly treatments add to pet owners’ stress by requiring them to reapply the treatment every 28 days for at least 3 months to ensure continuous protection as the fleas are driven out.3 And, if they accidentally forget? Months and months of pests in their home and on their dog, leading to an unhappy pet owner.
+        </p>
+        <p>
+            With Bravecto’s 12-week efficacy against adult fleas, you can drive infestations within the home to extinction with just one chew.4 Bravecto breaks the flea life cycle by rapidly and effectively killing adult fleas throughout the 12-week treatment interval. This prevents the introduction of new flea eggs into the house, and, in turn, prevents emergences of new adult fleas.
+        </p>
+        <p>
+            By disrupting the flea life cycle on the dog, Bravecto can lead to the extinction of fleas in infested environments – so pet owners can get back to enjoying more time with their dogs, flea-free.
         </p>
     </div>
-    <div class="bottom-support-download-row col-md-8 col-md-offset-2">
-        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-        <div class="bottom-support-download">
-            <h3>GOOD MEDICINE GROW BUSINESS</h3>
-            <p>
-                Discover more about how prescribing the best care
-                enhances business growth with the "Good Medicine Grows Business" eBook
-            </p>
-            <a class="btn btn-default" href="#">
-                DOWNLOAD PDF
-                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-            </a>
-            <br />
-            <a href="#">
-                Share this
-                <i class="icon icon-share"></i>
-            </a>
-        </div>
-    </div>
 </div>
-<div class="static-body support-body grey">
-    <div class="container">
-        <div class="row">
-            <h2>UNLEASH THE POWER OF SOCIAL MEDIA FOR YOUR PRACTICE.</h2>
-            <p>
-                Your online presence is the single most powerful tool available for building engagement and involvement
-                with pet owners. That's because pet owners actively seek out new ways to connect with like-minded
-                animal lovers and find useful information about pet health and wellness via the internet. In fact,
-                70% of pet owners spend up to 30 minutes per week reviewing pet-related topics online.
-            </p>
-        </div>
-        <div class="row">
-            <div class="col-md-6 support-screen-image">
-                <img src="~/Content/img/support_screen.png" />
-            </div>
-            <div class="col-md-6 support-screen-text">
-                <p>
-                    BravoVets is the ideal way to engage with your clients and
-                    deliver important news about a major advance in flea and tick protection.
-                    By linking your Facebook and Twitter business accounts to BravoVets, you can provide
-                    the information pet owners are looking for to ultimately increase your customer network
-                    and establish yourself as an authority in your field.
-                </p>
-                <p>
-                    With 69% of online adults (that's about half of the entire adult US population)
-                    using an online social network2 - it's a business imperative to make your presence known.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container static-body support-body">
-    <div class="bottom-support-download-row col-md-8 col-md-offset-2">
-        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-        <div class="bottom-support-download">
-            <h3>COST ANALYSIS PDF</h3>
-            <p>
-                See how you can help increase business by
-                bringing new and more dogs to your clinic by
-                prescribing Bravecto with this new analysis
-            </p>
-            <a class="btn btn-default" href="#">
-                DOWNLOAD PDF
-                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-            </a>
-            <br />
-            <a href="#">
-                Share this
-                <i class="icon icon-share"></i>
-            </a>
-        </div>
-    </div>
-</div>
-<div class="static-section supportbottom">
-    <div class="container">
-        <div class="static-overlay bggreen">
-            <h2>REVIEWS AND TESTIMONIALS</h2>
-        </div>
-    </div>
-</div>
-<div class="container static-body support-body">
-    <div class="static-body-content">
+<div class="container">
+    <div class="row">
+        <hr />
         <p>
-            Hear from other veterinary professionals in your area about their experiences partnering with Merck
-            Animal Health and prescribing Bravecto to their clients.
+            <sup>*</sup> BRAVECTO is effective against <span class="italic">Rhipicephalus sanguineus</span> (brown dog tick) for 8 weeks after dosing.
+            The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
-    </div>
-    <div class="bottom-support-download-row col-md-8 col-md-offset-2">
-        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-        <div class="bottom-support-download">
-            <h3>REVIEWS AND TESTIMONIALS PDF</h3>
-            <p>
-                Download to read the reviews and testimonials now
-            </p>
-            <a class="btn btn-default" href="#">
-                DOWNLOAD PDF
-                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-            </a>
-            <br />
-            <a href="#">
-                Share this
-                <i class="icon icon-share"></i>
-            </a>
-        </div>
+        <br />
+        <p>
+            <sup>1</sup>Beck S, Schein E, Baldermann C, von Samson-Himmelstjerna G, Kohn B. Tick infestation and tick prophylaxis in dogs in the area of Berlin/Brandenburg: results of a questionnaire study. Berliner und Münchener Tierärztliche Wochenschrift 126, Heft 1/2 (2013) Seiten 6–76.         </p>
+        <p>
+            <sup>2</sup>Rohdich N, Roepke RKA, Zschiesche E. A randomized, blinded, controlled and multi- centered field study comparing the efficacy and safety of Bravecto™ (fluralaner) against Frontline™ (fipronil) in flea- and tick-infested dogs. Parasites & Vectors (2014) 7:83.         </p>
     </div>
 </div>
-
