--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Social Content";
     Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
     ViewBag.DisplaySubnavigation = true;
+    ViewBag.SelectedNode = "social-content";
 }
 
 <div class="container">
