--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -16,7 +16,7 @@
             <div class="row top-jumbo-overlay">
                 <h1>Extend the best care with a partner at your side.</h1>
             </div>
-            <div class="bottom-jumbo-overlay">
+            <div class="bottom-jumbo-overlay bottomopaque">
                 <h4>
                     Partner with MSD for the support you need to provide the best care to your customers.
                 </h4>
