--- a/ProfSite/Views/Shared/SyndicatedContentShareLink.cshtml
+++ b/ProfSite/Views/Shared/SyndicatedContentShareLink.cshtml
@@ -2,5 +2,7 @@
 
 @if (Model.ShowShare)
 {
-    <a href="#" data-event-id="@Model.SyndicatedContentId" class="share @(!Model.EnableShare?"disabled":string.Empty) btn btn-link btn-share">@Resource.BravoVets_TrendingTopicItem_Share</a>
+    <a href="#" data-event-id="@Model.SyndicatedContentId" class="share @(!Model.EnableShare?"disabled":string.Empty) btn btn-link btn-share">
+        @Resource.BravoVets_TrendingTopicItem_Share this
+    </a>
 }
