--- a/ProfSite/Views/BravoVets/SocialTips.cshtml
+++ b/ProfSite/Views/BravoVets/SocialTips.cshtml
@@ -1,15 +1,22 @@
 ﻿@using BravoVets.DomainObject.Enum
 @model ViewSyndicatedContentModel
 @using bvResources = ProfSite.Resources.Resource
-
-<div class="container bv-resources">
+@{
+    ViewBag.SelectedNode = "socialtips";
+    Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.DisplaySubnavigation = true;
+}
+<div class="container">
+    <div class="row simpleheaderrow">
+        <h2>SOCIAL TIPS</h2>
+    </div>
+</div>
+<div class="container bv-resources social-tips-page">
     <div class="row">
         <div class="socialtips col-sm-8 resources-container">
-            <h1 class="page-title">@bvResources.BravoVets_SocialTips_SocialTips</h1>
-            <div class="sort-nav-container">
-                <div class="sort-nav">
-                    <div class="sort-title">@bvResources.BravoVets_SocialTips_View</div>
-                    <ul class="social-tips-filterby nav nav-pills">
+            <div class="clearfix">
+                <div class="pull-left">
+                    <ul class="social-tips-filters nav nav-pills">
                         <li class="active"><a href="filterBy=All">@bvResources.BravoVets_SocialTips_All</a></li>
                         <li><a id="show-favorites-filter" href="filterBy=@ContentFilterEnum.Favorites">@bvResources.BravoVets_SocialTips_Favorites</a></li>
                     </ul>
@@ -23,14 +30,45 @@
                     </select>
                 </div>
             </div>
-            @Html.Partial("SocialTipItems", Model)
+            <div class="socialtips-wrapper">
+                <ul class="bravecto-content syndicatedcontent-socialtips">
+                    <li class="veterinarian">
+                        <h3 class="veterinarian">@Model.Veterinarian.BusinessName</h3>
+                    </li>
+                    @if (Model.Content.Count() > 0)
+                    {
+                        foreach (var topic in Model.Content)
+                        {
+                            @Html.Partial("SocialTipItem", topic)
+                        }
+                    }
+                    else if (Model.IsFirstPage)
+                    {
+                        <li class="panel-diagonalbottom"><div class="no-items-message">@string.Format(bvResources.BravoVets_SocialTips_NoMoreItems, Model.CurrentView.ToLower())</div></li>
+                    }
+                    <li class="loading" style="display:none;">
+                        @Html.Partial("SocialLoading")
+                    </li>
+                    <li class="noItems panel-diagonalbottom" style="display:none;">
+                        <div class="no-items-message"> @bvResources.BravoVets_SocialTips_NoMoreItems</div>
+                    </li>
+                </ul>
+                @if (Model.Content.Count > 0)
+                {
+                    <div class="load-btn-wrapper">
+                        <button id="nextPage" data-nextpage="take=@Model.Take&skip=@Model.Skip" class="btn btn-primary">@bvResources.BravoVets_SocialTips_LoadMore</button>
+                    </div>
+                }
+            </div>
         </div>
-        <div class="col-sm-4 additional-content-container">
-            <h2 class="sidebar-title">@bvResources.BravoVets_SocialTips_AdditionalContent</h2>
+        <div class="col-sm-4 socialtips-side additional-content-container">
+            <h2>@bvResources.BravoVets_SocialTips_AdditionalContent</h2>
             <div class="additional-content">
-                @Html.Action("BravectoContent", "BravovetsWidgets")
-                @Html.Action("TrendingTopics", "BravoVetsWidgets")
-                @Html.Action("SocialActivity", "BravoVetsWidgets")
+                @Html.Action("BravectoContent", "BravovetsWidgets", new { v = 2 })
+                @Html.Action("TrendingTopics", "BravoVetsWidgets", new { v = 2 })
+                <div class="social-activity-wrapper">
+                    @Html.Action("SocialActivity", "BravoVetsWidgets", new { v = 2 })
+                </div>
             </div>
         </div>
     </div>
@@ -42,7 +80,7 @@
         $(document).ready(function () {
             $(".socialtips").trendingTopics({
                 sortByName: "div.social-tips-sortby",
-                filterByName: "ul.social-tips-filterby",
+                filterByName: "ul.social-tips-filters",
                 widgetListName: "ul.syndicatedcontent-socialtips",
                 getUrl: "/SocialTipItems"
             });
