--- a/ProfSite/Views/BravoVetsWidgets/SocialActivityWidget.cshtml
+++ b/ProfSite/Views/BravoVetsWidgets/SocialActivityWidget.cshtml
@@ -2,8 +2,10 @@
 @using bvResources = ProfSite.Resources.Resource
 <div class="additional-content-item social-activity">
     <div class="section-nav-wrapper">
-        <h2>@bvResources.BravoVetsWidget_SocialActivityWidget_SocialActivity</h2>
-        <a class="btn btn-link" href="/dashboard">@bvResources.BravoVetsWidget_SocialActivityWidget_ViewAll</a>
+        <div class="additional-content-item-header clearfix">
+            <h2>@bvResources.BravoVetsWidget_SocialActivityWidget_SocialActivity</h2>
+            <a class="btn btn-link viewall" href="/dashboard">@bvResources.BravoVetsWidget_SocialActivityWidget_ViewAll</a>
+        </div>
     </div>
     <div class="content-wrapper diagonal-bottom">
         <div class="notification-container facebook">
@@ -18,7 +20,7 @@
                 <div class="total-notifications">
                     <span class="total-count">@Model.FacebookProfile.likes</span> @bvResources.BravoVets_Widget_SocialActivity_Total
                 </div>
-                <a href="/dashboard#0">@bvResources.BravoVets_Widget_SocialActivity_ViewRecentActivity</a>
+                <a href="/linked-accounts#0">@bvResources.BravoVets_Widget_SocialActivity_ViewRecentActivity</a>
             </div>
         </div>
         <hr class="plus diagonal">
@@ -35,7 +37,7 @@
                     <span class="total-count">@Model.TwitterProfile.followers_count</span> @bvResources.BravoVets_Widget_SocialActivity_Total
 
                 </div>
-                <a href="/dashboard#1">@bvResources.BravoVets_Widget_SocialActivity_ViewRecentActivity</a>
+                <a href="/linked-accounts#1">@bvResources.BravoVets_Widget_SocialActivity_ViewRecentActivity</a>
             </div>
         </div>
     </div>
