--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -38,9 +38,11 @@
         <div class="col-md-4 social-content-column">
             <h3>LATEST SOCIAL CONTENT</h3>
             <div class="item">
-                <h4>LOREM IPSUM DOLOR SIT</h4>
+                <h4>A TALE OF TWO TREATMENTS</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget rutrum augue, volutpat facilisis enim. Pellentesque porttitor eleifend felis eget varius. Aliquam interdum convallis nulla, non bibendum arcu auctor vel. Mauris quis lacinia nibh. Donec faucibus rutrum interdum
+                    Take a look at two pet owners treatment experiences and discover how much more 
+                    convenient and effective 12-week-long Bravecto can be compared to a traditional 
+                    4-week treatment.
                 </p>
                 <a href="#" class="share-this">
                     Share this
@@ -48,7 +50,7 @@
                 </a>
             </div>
             <div class="item">
-                <h4>LOREM IPSUM DOLOR SIT</h4>
+                <h4>4 WEEK VS. 12-WEEK FLEA AND TICK PROTECTION</h4>
                 <p>
                     <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
                 </p>
