--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<div class="static-body resources-body grey">
+<div class="static-body resources-body grey resources-body-less">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
