adding small bits of copy for the social media pages

--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -85,8 +85,8 @@
             <h4>VIDEO</h4>
             <div class="social-content-item-body">
                 <div class="social-content-content">
-                    <h5>BRAVECTO OVERVIEW VIDEO</h5>
-                    <p>Lorem ipsum</p>
+                    <h5>A TALE OF TWO TREATMENTS</h5>
+                    <p>Take a look at two pet owners treatment experiences and discover how much more convenient and effective 12-week-long Bravecto can be compared to a traditional 4-week treatment.</p>
                     <div class="action-wrapper">
                         <a href="#">
                             Share this
@@ -103,8 +103,8 @@
             <h4>POSTER</h4>
             <div class="social-content-item-body">
                 <div class="social-content-content">
-                    <h5>FLEA AND TICK POSTER</h5>
-                    <p>Lorem ipsum</p>
+                    <h5>EXTENDING THE BEST EXPERIENCES WITH INNOVATIVE FLEA AND TICK CARE</h5>
+                    <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience to your customers while growing your business with Bravecto.</p>
                     <div class="action-wrapper">
                         <a href="#">
                             Share this
