--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -36,7 +36,8 @@
             </div>
         </div>
         <div class="col-md-4 social-content-column">
-            <h3>LATEST SOCIAL CONTENT</h3>
+            @Html.Action("BravectoContent", "BravovetsWidgets")
+            @Html.Action("SocialContent", "BravoVetsWidgets")
             <div class="item">
                 <h4>A TALE OF TWO TREATMENTS</h4>
                 <p>
@@ -51,8 +52,10 @@
             </div>
             <div class="item">
                 <h4>4 WEEK VS. 12-WEEK FLEA AND TICK PROTECTION</h4>
+                <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
                 <p>
-                    <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
+                    
+test
                 </p>
                 <a href="#" class="share-this">
                     Share this
