--- a/ProfSite/Views/Shared/SyndicatedContentShareLink.cshtml
+++ b/ProfSite/Views/Shared/SyndicatedContentShareLink.cshtml
@@ -2,7 +2,8 @@
 
 @if (Model.ShowShare)
 {
-    <a href="#" data-event-id="@Model.SyndicatedContentId" class="share @(!Model.EnableShare?"disabled":string.Empty) btn btn-link btn-share">
+    <a href="#" data-event-id="@Model.SyndicatedContentId" class="share-this share @(!Model.EnableShare?"disabled":string.Empty)">
         @Resource.BravoVets_TrendingTopicItem_Share this
+        <i class="icon icon-share"></i>
     </a>
 }
